# docs/swagger.json
@@ -8,7 +8,7 @@
     "host": "localhost:4000",
     "basePath": "/api/v1",
     "paths": {
-        "/api/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Authenticates a user and returns a JWT token",
                 "consumes": [
@@ -78,7 +78,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "Registers a new user with email and password",
                 "consumes": [
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "/api/v1/orders": {
+        "/orders": {
             "get": {
                 "security": [
                     {
@@ -193,10 +193,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/orders.PlaceOrderDTO"
-                            }
+                            "$ref": "#/definitions/orders.PlaceOrderDTO"
                         }
                     }
                 ],
@@ -240,7 +237,7 @@
                 }
             }
         },
-        "/api/v1/orders/{id}/cancel": {
+        "/orders/{id}/cancel": {
             "put": {
                 "security": [
                     {
@@ -283,77 +280,7 @@
                 }
             }
         },
-        "/api/v1/orders/{id}/status": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Admin only: Updates the status of an order",
-                "tags": [
-                    "orders"
-                ],
-                "summary": "Update an order status",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Order ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "New order status",
-                        "name": "status",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/orders.UpdateOrderStatusDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/utils.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/models.Order"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/products": {
+        "/products": {
             "get": {
                 "security": [
                     {
@@ -460,7 +387,7 @@
                 }
             }
         },
-        "/api/v1/products/{id}": {
+        "/products/{id}": {
             "get": {
                 "security": [
                     {
@@ -701,20 +628,6 @@
                 }
             }
         },
-        "models.OrderProduct": {
-            "type": "object",
-            "properties": {
-                "order_id": {
-                    "type": "integer"
-                },
-                "product_id": {
-                    "type": "integer"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.OrderStatus": {
             "type": "string",
             "enum": [
@@ -767,19 +680,23 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.OrderProduct"
+                        "$ref": "#/definitions/orders.ProductOrder"
                     }
                 }
             }
         },
-        "orders.UpdateOrderStatusDTO": {
+        "orders.ProductOrder": {
             "type": "object",
             "required": [
-                "status"
+                "quantity"
             ],
             "properties": {
-                "status": {
-                    "$ref": "#/definitions/models.OrderStatus"
+                "productID": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
