# orders/orders_controller.go
@@ -2,19 +2,25 @@ package orders
 
 import (
 	"ecommerce-api/utils"
+	"ecommerce-api/models"
 	"errors"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
+	 "github.com/go-playground/validator/v10"
 )
+
+var validate *validator.Validate
+
 
 type OrderController struct {
 	orderService *OrderService
 }
 
 func NewOrderController(orderService *OrderService) *OrderController {
+	validate = validator.New()
 	return &OrderController{orderService: orderService}
 }
 
@@ -24,29 +30,37 @@ func NewOrderController(orderService *OrderService) *OrderController {
 // @Tags         orders
 // @Accept       json
 // @Produce      json
-// @Param        products  body      []PlaceOrderDTO   true  "List of products to order"
+// @Param        products  body      PlaceOrderDTO   true  "List of products to order"
 // @Success      201       {object}  utils.APIResponse{data=models.Order}
 // @Failure      400       {object}  utils.APIResponse
 // @Failure      404       {object}  utils.APIResponse
 // @Failure      500       {object}  utils.APIResponse
 // @Security     BearerAuth
-// @Router       /api/v1/orders [post]
+// @Router       /orders [post]
 func (c *OrderController) PlaceOrder(ctx *gin.Context) {
 	var input PlaceOrderDTO
-
-	// Bind JSON input to struct
 	if err := ctx.ShouldBindJSON(&input); err != nil {
 		utils.NewAPIResponse(http.StatusBadRequest, "Invalid input", nil, err.Error()).Send(ctx)
 		return
 	}
 
-	// Get user ID from context
-	userID := ctx.GetUint("userID")
-
-	// Place the order using the service
-	order, err := c.orderService.PlaceOrder(userID, input.Products)
+	userIDStr, exists := ctx.Get("userID")
+	if !exists {
+		utils.NewAPIResponse(http.StatusUnauthorized, "Unauthorized", nil, "User ID not found in context").Send(ctx)
+	}
+	userID, err := strconv.ParseUint(userIDStr.(string), 10, 32)
 	if err != nil {
-		utils.NewAPIResponse(http.StatusInternalServerError, "Failed to place order", nil, err.Error()).Send(ctx)
+		utils.NewAPIResponse(http.StatusBadRequest, "Invalid User ID", nil, "User ID conversion failed").Send(ctx)
+		return
+	}
+	order, err := c.orderService.PlaceOrder(uint(userID), input.Products)
+	if err != nil {
+		switch {
+		case errors.Is(err, gorm.ErrRecordNotFound):
+			utils.NewAPIResponse(http.StatusNotFound, "One or more products do not exist", nil, "").Send(ctx)
+		default:
+			utils.NewAPIResponse(http.StatusInternalServerError, "Failed to place order", nil, err.Error()).Send(ctx)
+		}
 		return
 	}
 
@@ -61,12 +75,20 @@ func (c *OrderController) PlaceOrder(ctx *gin.Context) {
 // @Success      200  {object}  utils.APIResponse{data=[]models.Order}
 // @Failure      500  {object}  utils.APIResponse
 // @Security     BearerAuth
-// @Router       /api/v1/orders [get]
+// @Router       /orders [get]
 func (c *OrderController) ListOrders(ctx *gin.Context) {
 	// Get user ID from context
-	userID := ctx.GetUint("userID")
+	userIDStr, exists := ctx.Get("userID")
+	if !exists {
+		utils.NewAPIResponse(http.StatusUnauthorized, "Unauthorized", nil, "User ID not found in context").Send(ctx)
+	}
+	userID, err := strconv.ParseUint(userIDStr.(string), 10, 32)
+	if err != nil {
+		utils.NewAPIResponse(http.StatusBadRequest, "Invalid User ID", nil, "User ID conversion failed").Send(ctx)
+		return
+	}
 
-	orders, err := c.orderService.ListOrders(userID)
+	orders, err := c.orderService.ListOrders(uint(userID))
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			utils.NewAPIResponse(http.StatusNotFound, "No orders found", nil, "").Send(ctx)
@@ -88,7 +110,7 @@ func (c *OrderController) ListOrders(ctx *gin.Context) {
 // @Failure      400  {object}  utils.APIResponse
 // @Failure      404  {object}  utils.APIResponse
 // @Security     BearerAuth
-// @Router       /api/v1/orders/{id}/cancel [put]
+// @Router       /orders/{id}/cancel [put]
 func (c *OrderController) CancelOrder(ctx *gin.Context) {
 	orderID, err := strconv.ParseUint(ctx.Param("id"), 10, 32)
 	if err != nil {
@@ -96,12 +118,26 @@ func (c *OrderController) CancelOrder(ctx *gin.Context) {
 		return
 	}
 
-	userID := ctx.GetUint("userID")
-	err = c.orderService.CancelOrder(uint(orderID), userID)
+	userIDStr, exists := ctx.Get("userID")
+	if !exists {
+		utils.NewAPIResponse(http.StatusUnauthorized, "Unauthorized", nil, "User ID not found in context").Send(ctx)
+		return
+	}
+
+	userID, err := strconv.ParseUint(userIDStr.(string), 10, 32)
 	if err != nil {
-		if err.Error() == "order not found or not eligible for cancellation" {
-			utils.NewAPIResponse(http.StatusNotFound, err.Error(), nil, "").Send(ctx)
-		} else {
+		utils.NewAPIResponse(http.StatusBadRequest, "Invalid User ID", nil, "User ID conversion failed").Send(ctx)
+		return
+	}
+
+	err = c.orderService.CancelOrder(uint(orderID), uint(userID))
+	if err != nil {
+		switch err.Error() {
+		case "order not found":
+			utils.NewAPIResponse(http.StatusNotFound, "Order not found", nil, "").Send(ctx)
+		case "order is not eligible for cancellation":
+			utils.NewAPIResponse(http.StatusBadRequest, "Order cannot be canceled", nil, "Order status must be 'Pending' to cancel").Send(ctx)
+		default:
 			utils.NewAPIResponse(http.StatusInternalServerError, "Failed to cancel order", nil, err.Error()).Send(ctx)
 		}
 		return
@@ -110,18 +146,25 @@ func (c *OrderController) CancelOrder(ctx *gin.Context) {
 	utils.NewAPIResponse(http.StatusOK, "Order canceled successfully", nil, "").Send(ctx)
 }
 
+
 // UpdateOrderStatus godoc
 // @Summary      Update an order status
-// @Description  Admin only: Updates the status of an order
+// @Description  Admin only: Updates the status of an order. The valid statuses are:
+//               - pending: The order is newly created and awaiting processing.
+//               - processing: The order is being processed.
+//               - shipped: The order has been shipped to the customer.
+//               - delivered: The order has been delivered to the customer.
+//               - cancelled: The order was cancelled and will not be fulfilled.
 // @Tags         orders
 // @Param        id      path      string               true  "Order ID"
-// @Param        status  body      UpdateOrderStatusDTO   true  "New order status"
+// @Param        status  body      UpdateOrderStatusDTO true  "New order status. Allowed values are 'pending', 'processing', 'shipped', 'delivered', 'cancelled'"
 // @Success      200     {object}  utils.APIResponse{data=models.Order}
 // @Failure      400     {object}  utils.APIResponse
 // @Failure      404     {object}  utils.APIResponse
 // @Failure      500     {object}  utils.APIResponse
 // @Security     BearerAuth
-// @Router       /api/v1/orders/{id}/status [put]
+// @Router       /orders/{id}/status [put]
+
 func (c *OrderController) UpdateOrderStatus(ctx *gin.Context) {
 	orderID, err := strconv.ParseUint(ctx.Param("id"), 10, 32)
 	if err != nil {
@@ -131,6 +174,14 @@ func (c *OrderController) UpdateOrderStatus(ctx *gin.Context) {
 
 	var input UpdateOrderStatusDTO
 	if err := ctx.ShouldBindJSON(&input); err != nil {
+		if ve, ok := err.(validator.ValidationErrors); ok {
+			for _, fieldErr := range ve {
+				if fieldErr.Tag() == "orderStatus" {
+					utils.NewAPIResponse(http.StatusBadRequest, "Invalid order status", nil, models.OrderStatus("").IsValid().Error()).Send(ctx)
+					return
+				}
+			}
+		}
 		utils.NewAPIResponse(http.StatusBadRequest, "Invalid input", nil, err.Error()).Send(ctx)
 		return
 	}
