# orders/orders_dto.go
@@ -4,10 +4,24 @@ import (
 	"ecommerce-api/models"
 )
 
+type ProductOrder struct {
+	ProductID uint `json:"productID"`
+	Quantity  int  `json:"quantity" binding:"required,gte=1"`
+}
+
 type PlaceOrderDTO struct {
-    Products []models.OrderProduct `json:"products"`
+	Products []ProductOrder `json:"products"`
 }
 
 type UpdateOrderStatusDTO struct {
-    Status models.OrderStatus `json:"status" binding:"required"`
+	Status models.OrderStatus `json:"status" binding:"required,orderStatus"`
+}
+
+type OrderSummary struct {
+	ID           uint    `json:"id"`
+	ProductName  string  `json:"product_name"`
+	Description  string  `json:"description"`
+	ProductPrice float64 `json:"product_price"`
+	Quantity     int     `json:"quantity"`
+	TotalPrice   float64 `json:"total_price"`
 }
